--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Word Bot - Dictionary App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="/styles.css">
+
  
 <body>
     <!-- Added navigation bar - 2025.05.01 -->
@@ -78,6 +79,7 @@
             <i class="fas fa-trash"></i>
         </button>
     </div>
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script src="/script.js"></script>
+
 </body>
 </html>
